Comment the 'display: block' in another '.loading-line' css rule of the product-form component to avoid style overlapping

--- a/src/components/product-form/style.css
+++ b/src/components/product-form/style.css
@@ -508,7 +508,7 @@ button.is-loading > span {
   );
   background-size: 200%;
   border-radius: 2px;
-  display: block;
+  /* display: block; */
   height: var(--loading-line-height);
 }
 
